[gd_scene load_steps=4 format=3 uid="uid://c2q31er5uottm"]

[ext_resource type="Theme" uid="uid://dwl3yot0elbvx" path="res://theme_default.tres" id="1_363mx"]
[ext_resource type="Script" path="res://ui/bst_scene_control.gd" id="1_y53dr"]

[sub_resource type="LabelSettings" id="LabelSettings_j2q1e"]
font_size = 36

[node name="BstSceneControl" type="CanvasLayer"]
script = ExtResource("1_y53dr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_363mx")

[node name="InputMarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -328.0
offset_top = -88.0
offset_right = 330.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Control/InputMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LineEdit" type="LineEdit" parent="Control/InputMarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "123"
max_length = 16
clear_button_enabled = true
caret_blink = true
caret_blink_interval = 0.3

[node name="OptionButton" type="OptionButton" parent="Control/InputMarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
action_mode = 1
alignment = 1
item_count = 3
selected = 1
allow_reselect = true
popup/item_0/text = "Op"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "INSERT"
popup/item_1/id = 1
popup/item_2/text = "SEARCH"
popup/item_2/id = 2

[node name="SubmitButton" type="Button" parent="Control/InputMarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "SUBMIT"

[node name="TreeMarginContainer2" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TreeMarginContainer2"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/TreeMarginContainer2/VBoxContainer"]
layout_mode = 2
text = "TREE"
label_settings = SubResource("LabelSettings_j2q1e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TreeResetButton" type="Button" parent="Control/TreeMarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(128, 36)
layout_mode = 2
text = "RESET"

[node name="ViewMarginContainer3" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 160.0
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ViewMarginContainer3"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/ViewMarginContainer3/VBoxContainer"]
layout_mode = 2
text = "VIEW"
label_settings = SubResource("LabelSettings_j2q1e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ViewResetButton" type="Button" parent="Control/ViewMarginContainer3/VBoxContainer"]
custom_minimum_size = Vector2(128, 36)
layout_mode = 2
text = "RESET"

[connection signal="pressed" from="Control/InputMarginContainer/HBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="Control/TreeMarginContainer2/VBoxContainer/TreeResetButton" to="." method="_on_tree_reset_button_pressed"]
[connection signal="pressed" from="Control/ViewMarginContainer3/VBoxContainer/ViewResetButton" to="." method="_on_view_reset_button_pressed"]
